--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "js/es5-shim"]
 	path = js/es5-shim
-	url = git://github.com/kriskowal/es5-shim.git
+	url = https://github.com/es-shims/es5-shim.git
 [submodule "css/pie"]
 	path = css/pie
-	url = git://github.com/lojjic/PIE.git
+	url = https://github.com/lojjic/PIE.git
 [submodule "js/classList"]
 	path = js/classList
 	url = https://github.com/eligrey/classList.js.git
