add inexorabletash/polyfill shims

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/es5-shim"]
 	path = lib/es5-shim
 	url = git@github.com:es-shims/es5-shim.git
+[submodule "lib/polyfill"]
+	path = lib/polyfill
+	url = https://github.com/inexorabletash/polyfill.git
