--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "test":       "zuul -- test/tests.js",
     "test:local": "zuul --local 8080 -- test/tests.js",
-    "watch":      "watchy -w src,lib,Makefile -- make clean all"
+    "watch":      "watchy -w lib,src,Makefile -- make clean all",
+    "watch:test": "watchy -w *.js,test -- npm run test:local"
   },
   "repository": {
     "type": "git",
