use my forks of ie8 and dom4 for now

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "lib/ie8"]
 	path = lib/ie8
-	url = git@github.com:WebReflection/ie8.git
+	url = git@github.com:shawnbot/ie8.git
 [submodule "lib/dom4"]
 	path = lib/dom4
-	url = git@github.com:WebReflection/dom4.git
+	url = git@github.com:shawnbot/dom4.git
 [submodule "lib/es5-shim"]
 	path = lib/es5-shim
 	url = git@github.com:es-shims/es5-shim.git
