--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "lib/ie8"]
 	path = lib/ie8
 	url = git@github.com:shawnbot/ie8.git
+	branch = ie9
 [submodule "lib/dom4"]
 	path = lib/dom4
 	url = git@github.com:shawnbot/dom4.git
