--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aight",
-  "version": "2.0.1a",
+  "version": "2.0.2a",
   "description": "un-suck DOM and CSS APIs in old IE",
   "main": "aight.js",
   "directories": {
@@ -18,7 +18,7 @@
     "build":      "make clean all",
     "test":       "zuul -- test/tests.js",
     "test:local": "zuul --local 8080 -- test/tests.js",
-    "watch":      "watchy -w lib,src,Makefile -- npm run build",
+    "watch":      "watchy -w lib,src,Makefile,package.json -- npm run build",
     "watch:test": "watchy -w *.js,test -- npm run test:local"
   },
   "repository": {
