--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aight",
   "version": "2.0.3a",
-  "description": "un-suck DOM and CSS APIs in old IE",
+  "description": "un-suck JavaScript APIs in IE8 & 9",
   "main": "aight.js",
   "directories": {
     "test": "test"
