--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "aight",
   "main": "./aight.js",
-  "version": "2.0.3a",
+  "version": "2.0.4",
   "homepage": "https://github.com/shawnbot/aight",
   "authors": [
     "Shawn Allen <shawn.allen@hush.com>"
