--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aight",
-  "version": "2.0.3a",
+  "version": "2.0.4",
   "description": "un-suck JavaScript APIs in IE8 & 9",
   "main": "aight.js",
   "directories": {
